--- a/libs/remix-astwalker/package.json
+++ b/libs/remix-astwalker/package.json
@@ -33,10 +33,10 @@
     ]
   },
   "dependencies": {
-    "@ethereumjs/block": "^4.2.0",
-    "@ethereumjs/tx": "^4.1.1",
-    "@ethereumjs/util": "^8.0.5",
-    "@ethereumjs/vm": "^6.4.1",
+    "@ethereumjs/block": "5.1.1",
+    "@ethereumjs/tx": "5.2.1",
+    "@ethereumjs/util": "9.0.2",
+    "@ethereumjs/vm": "7.2.1",
     "@remix-project/remix-lib": "^0.5.47",
     "@types/tape": "^4.2.33",
     "async": "^2.6.2",
