--- a/libs/remix-debug/package.json
+++ b/libs/remix-debug/package.json
@@ -21,11 +21,11 @@
     "test": "./../../node_modules/.bin/ts-node --project ../../tsconfig.base.json --require tsconfig-paths/register ./../../node_modules/.bin/tape ./test/tests.ts"
   },
   "dependencies": {
-    "@ethereumjs/block": "^4.2.0",
-    "@ethereumjs/common": "^3.1.1",
-    "@ethereumjs/tx": "^4.1.1",
-    "@ethereumjs/util": "^8.0.5",
-    "@ethereumjs/vm": "^6.4.1",
+    "@ethereumjs/block": "5.1.1",
+    "@ethereumjs/common": "4.2.0",
+    "@ethereumjs/tx": "5.2.1",
+    "@ethereumjs/util": "9.0.2",
+    "@ethereumjs/vm": "7.2.1",
     "@remix-project/remix-astwalker": "^0.0.70",
     "@remix-project/remix-lib": "^0.5.47",
     "@remix-project/remix-simulator": "^0.2.40",
